// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/TextField Defaults play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:rd:"
           class="LabelWithHelp_label__59tP-"
           for="textFieldTextboxId-:rc:"
    >
      Navn
    </label>
    <input id="textFieldTextboxId-:rc:"
           class="TextField_textbox__qbZlk"
           value
    >
    <div id="textFieldErrorId-:rb:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithAs play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:rj:"
           class="LabelWithHelp_label__59tP-"
           for="textFieldTextboxId-:ri:"
    >
      Navn
    </label>
    <textarea id="textFieldTextboxId-:ri:"
              class="TextField_textbox__qbZlk  TextField_textbox_multiline__dzg2r"
    >
    </textarea>
    <div id="textFieldErrorId-:rh:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithAttributes play-test 1`] = `
<div data-test-block="true">
  <div class="dummyClassname"
       lang="nb"
  >
    <label id="labelId-:r5:"
           class="LabelWithHelp_label__59tP-"
           for="htmlid"
    >
      Navn
    </label>
    <input id="htmlid"
           class="TextField_textbox__qbZlk"
           data-testid="123ID"
           form="formid123"
           value
    >
    <div id="textFieldErrorId-:r3:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithAutoCompleteInputModeNameAndPlaceholder play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r15:"
           class="LabelWithHelp_label__59tP-"
           for="textFieldTextboxId-:r14:"
    >
      Navn
    </label>
    <input id="textFieldTextboxId-:r14:"
           class="TextField_textbox__qbZlk"
           autocomplete="given-name"
           inputmode="text"
           name="test_name"
           placeholder="Kari Nordmann"
           value
    >
    <div id="textFieldErrorId-:r13:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithCustomClassNames play-test 1`] = `
<div data-test-block="true">
  <div class="dummyClassname">
    <label id="labelId-:r8:"
           class="LabelWithHelp_label__59tP-    dummyClassname"
           for="textFieldTextboxId-:r7:"
    >
      Navn
    </label>
    <button class="IconButton_button__mw9sG IconButton_button_extraSmall__3+QfY IconButton_button_outlined__aDbNH Help_helpButton__I0E-6"
            type="button"
            aria-describedby="labelId-:r8:"
            aria-expanded="false"
    >
      <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz IconButton_icon__1J4sN"
           viewbox="0 0 24 24"
           focusable="false"
           aria-labelledby="svgtitle-:r9:"
           aria-hidden="false"
           role="img"
      >
        <title id="svgtitle-:r9:">
          Hjelp
        </title>
        <path d="M10 19h3v3h-3v-3Zm2-17c5.35.22 7.68 5.62 4.5 9.67-.83 1-2.17 1.66-2.83 2.5C13 15 13 16 13 17h-3c0-1.67 0-3.08.67-4.08.66-1 2-1.59 2.83-2.25C15.92 8.43 15.32 5.26 12 5a3 3 0 0 0-3 3H6a6 6 0 0 1 6-6Z">
        </path>
      </svg>
    </button>
    <div class="Help_description__niabw   dummyClassname">
      beskrivelse
    </div>
    <input id="textFieldTextboxId-:r7:"
           class="TextField_textbox__qbZlk    dummyClassname"
           aria-describedby="textFieldErrorId-:r6:"
           aria-invalid="true"
           value
    >
    <div id="textFieldErrorId-:r6:"
         aria-live="assertive"
         aria-atomic="true"
    >
      <div class="ErrorMessage_errorMessage__508oW dummyClassname">
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_small__Yzxmo ErrorMessage_errorMessageIcon__2N-Qa"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M13 13h-2V7h2v6Zm0 4h-2v-2h2v2ZM12 2C6.477 2 2 6.477 2 12A10 10 0 1 0 12 2Z">
          </path>
        </svg>
        <p class="ErrorMessage_errorMessageText__e27TU">
          Navn er obligatorisk
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithDefaultValue play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:rs:"
           class="LabelWithHelp_label__59tP-"
           for="textFieldTextboxId-:rr:"
    >
      Navn
    </label>
    <input id="textFieldTextboxId-:rr:"
           class="TextField_textbox__qbZlk"
           value="Kari Nordmann"
    >
    <div id="textFieldErrorId-:rq:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithDefaultValueAndAutoSizeTextArea play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r12:"
           class="LabelWithHelp_label__59tP-"
           for="textFieldTextboxId-:r11:"
    >
      Navn
    </label>
    <textarea id="textFieldTextboxId-:r11:"
              class="TextField_textbox__qbZlk  TextField_textbox_multiline__dzg2r TextField_textbox_autosize__Ws65A"
              style="height: 88px;"
    >
      Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
    </textarea>
    <div id="textFieldErrorId-:r10:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithDefaultValueAndThousandSeparator play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:rv:"
           class="LabelWithHelp_label__59tP-"
           for="textFieldTextboxId-:ru:"
    >
      Navn
    </label>
    <input id="textFieldTextboxId-:ru:"
           class="TextField_textbox__qbZlk"
           value="10 000"
    >
    <div id="textFieldErrorId-:rt:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithDescription play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r21:"
           class="LabelWithHelp_label__59tP-"
           for="textFieldTextboxId-:r20:"
    >
      Navn
    </label>
    <div class="Help_description__niabw">
      En liten beskrivelse tekst
    </div>
    <input id="textFieldTextboxId-:r20:"
           class="TextField_textbox__qbZlk"
           value
    >
    <div id="textFieldErrorId-:r1v:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithDisabled play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:rm:"
           class="LabelWithHelp_label__59tP-"
           for="textFieldTextboxId-:rl:"
    >
      Navn
    </label>
    <input id="textFieldTextboxId-:rl:"
           class="TextField_textbox__qbZlk"
           disabled
           value="Kari Nordmann"
    >
    <div id="textFieldErrorId-:rk:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithErrorMessage play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r1t:"
           class="LabelWithHelp_label__59tP-"
           for="textFieldTextboxId-:r1s:"
    >
      Navn
    </label>
    <input id="textFieldTextboxId-:r1s:"
           class="TextField_textbox__qbZlk"
           aria-describedby="textFieldErrorId-:r1r:"
           aria-invalid="true"
           value
    >
    <div id="textFieldErrorId-:r1r:"
         aria-live="assertive"
         aria-atomic="true"
    >
      <div class="ErrorMessage_errorMessage__508oW ">
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_small__Yzxmo ErrorMessage_errorMessageIcon__2N-Qa"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M13 13h-2V7h2v6Zm0 4h-2v-2h2v2ZM12 2C6.477 2 2 6.477 2 12A10 10 0 1 0 12 2Z">
          </path>
        </svg>
        <p class="ErrorMessage_errorMessageText__e27TU">
          Navn er obligatorisk
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithEventHandlers play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r2n:"
           class="LabelWithHelp_label__59tP-"
           for="textFieldTextboxId-:r2m:"
    >
      TextField har blitt blurret
    </label>
    <input id="textFieldTextboxId-:r2m:"
           class="TextField_textbox__qbZlk"
           value
    >
    <div id="textFieldErrorId-:r2l:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithHelpText play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r2d:"
           class="LabelWithHelp_label__59tP-"
           for="textFieldTextboxId-:r2c:"
    >
      Navn
    </label>
    <button class="IconButton_button__mw9sG IconButton_button_extraSmall__3+QfY IconButton_button_outlined__aDbNH Help_helpButton__I0E-6"
            type="button"
            aria-describedby="labelId-:r2d:"
            aria-expanded="false"
    >
      <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz IconButton_icon__1J4sN"
           viewbox="0 0 24 24"
           focusable="false"
           aria-labelledby="svgtitle-:r2e:"
           aria-hidden="false"
           role="img"
      >
        <title id="svgtitle-:r2e:">
          Hjelp
        </title>
        <path d="M10 19h3v3h-3v-3Zm2-17c5.35.22 7.68 5.62 4.5 9.67-.83 1-2.17 1.66-2.83 2.5C13 15 13 16 13 17h-3c0-1.67 0-3.08.67-4.08.66-1 2-1.59 2.83-2.25C15.92 8.43 15.32 5.26 12 5a3 3 0 0 0-3 3H6a6 6 0 0 1 6-6Z">
        </path>
      </svg>
    </button>
    <input id="textFieldTextboxId-:r2c:"
           class="TextField_textbox__qbZlk"
           value
    >
    <div id="textFieldErrorId-:r2b:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithHelpTextAndDescription smoke-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r2i:"
           class="LabelWithHelp_label__59tP-"
           for="textFieldTextboxId-:r2h:"
    >
      Navn
    </label>
    <button class="IconButton_button__mw9sG IconButton_button_extraSmall__3+QfY IconButton_button_outlined__aDbNH Help_helpButton__I0E-6"
            type="button"
            aria-describedby="labelId-:r2i:"
            aria-expanded="false"
    >
      <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz IconButton_icon__1J4sN"
           viewbox="0 0 24 24"
           focusable="false"
           aria-labelledby="svgtitle-:r2j:"
           aria-hidden="false"
           role="img"
      >
        <title id="svgtitle-:r2j:">
          Hjelp
        </title>
        <path d="M10 19h3v3h-3v-3Zm2-17c5.35.22 7.68 5.62 4.5 9.67-.83 1-2.17 1.66-2.83 2.5C13 15 13 16 13 17h-3c0-1.67 0-3.08.67-4.08.66-1 2-1.59 2.83-2.25C15.92 8.43 15.32 5.26 12 5a3 3 0 0 0-3 3H6a6 6 0 0 1 6-6Z">
        </path>
      </svg>
    </button>
    <div class="Help_description__niabw">
      En liten beskrivelse tekst
    </div>
    <input id="textFieldTextboxId-:r2h:"
           class="TextField_textbox__qbZlk"
           value
    >
    <div id="textFieldErrorId-:r2g:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithHelpToggleEvent smoke-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r2q:"
           class="LabelWithHelp_label__59tP-"
           for="textFieldTextboxId-:r2p:"
    >
      Navn
    </label>
    <button class="IconButton_button__mw9sG IconButton_button_extraSmall__3+QfY IconButton_button_outlined__aDbNH Help_helpButton__I0E-6"
            type="button"
            aria-describedby="labelId-:r2q:"
            aria-expanded="false"
    >
      <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz IconButton_icon__1J4sN"
           viewbox="0 0 24 24"
           focusable="false"
           aria-labelledby="svgtitle-:r2r:"
           aria-hidden="false"
           role="img"
      >
        <title id="svgtitle-:r2r:">
          Hjelp
        </title>
        <path d="M10 19h3v3h-3v-3Zm2-17c5.35.22 7.68 5.62 4.5 9.67-.83 1-2.17 1.66-2.83 2.5C13 15 13 16 13 17h-3c0-1.67 0-3.08.67-4.08.66-1 2-1.59 2.83-2.25C15.92 8.43 15.32 5.26 12 5a3 3 0 0 0-3 3H6a6 6 0 0 1 6-6Z">
        </path>
      </svg>
    </button>
    <input id="textFieldTextboxId-:r2p:"
           class="TextField_textbox__qbZlk"
           value
    >
    <div id="textFieldErrorId-:r2o:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithHideLabel play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r24:"
           class="LabelWithHelp_label__59tP-  LabelWithHelp_srOnly__uWL7Z"
           for="textFieldTextboxId-:r23:"
    >
      Navn
    </label>
    <input id="textFieldTextboxId-:r23:"
           class="TextField_textbox__qbZlk"
           value
    >
    <div id="textFieldErrorId-:r22:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithMinAndMaxLength play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r1h:"
           class="LabelWithHelp_label__59tP-"
           for="textFieldTextboxId-:r1g:"
    >
      Navn
    </label>
    <input id="textFieldTextboxId-:r1g:"
           class="TextField_textbox__qbZlk"
           maxlength="50"
           minlength="10"
           value
    >
    <div id="textFieldErrorId-:r1f:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithPattern play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r1k:"
           class="LabelWithHelp_label__59tP-"
           for="textFieldTextboxId-:r1j:"
    >
      Navn
    </label>
    <input id="textFieldTextboxId-:r1j:"
           class="TextField_textbox__qbZlk"
           pattern="[a-z]"
           value
    >
    <div id="textFieldErrorId-:r1i:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithReadOnly play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r18:"
           class="LabelWithHelp_label__59tP-"
           for="textFieldTextboxId-:r17:"
    >
      Navn
    </label>
    <input id="textFieldTextboxId-:r17:"
           class="TextField_textbox__qbZlk"
           readonly
           value="Kari Nordmann"
    >
    <div id="textFieldErrorId-:r16:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithRef play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r2:"
           class="LabelWithHelp_label__59tP-"
           for="textFieldTextboxId-:r1:"
    >
      Navn
    </label>
    <input id="textFieldTextboxId-:r1:"
           class="TextField_textbox__qbZlk"
           value
           name="dummyNameForwardedFromRef"
    >
    <div id="textFieldErrorId-:r0:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithRequired play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r1b:"
           class="LabelWithHelp_label__59tP-"
           for="textFieldTextboxId-:r1a:"
    >
      Navn
    </label>
    <input id="textFieldTextboxId-:r1a:"
           class="TextField_textbox__qbZlk"
           required
           value
    >
    <div id="textFieldErrorId-:r19:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithRequiredAndMark smoke-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r1e:"
           class="LabelWithHelp_label__59tP- LabelWithHelp_label_required__KSuzW"
           for="textFieldTextboxId-:r1d:"
    >
      Navn
    </label>
    <input id="textFieldTextboxId-:r1d:"
           class="TextField_textbox__qbZlk"
           required
           value
    >
    <div id="textFieldErrorId-:r1c:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithRows play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r1n:"
           class="LabelWithHelp_label__59tP-"
           for="textFieldTextboxId-:r1m:"
    >
      Navn
    </label>
    <textarea id="textFieldTextboxId-:r1m:"
              class="TextField_textbox__qbZlk  TextField_textbox_multiline__dzg2r"
              rows="4"
    >
    </textarea>
    <div id="textFieldErrorId-:r1l:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithTextAreaAutoSizeInModal play-test 1`] = `
<div data-test-block="true">
  <button class="Button_button__pkuNv Button_button_primary__8Ouwo   "
          type="button"
  >
    <span class="Button_buttonText__JxyB+">
      Vis modal
    </span>
  </button>
  <dialog class="Modal_modal__JdsM-"
          aria-labelledby="modalHeadingId-:r2s:"
          open
  >
    <div tabindex="-1"
         class="Modal_modalContainer__O6yz0"
    >
      <button class="IconButton_button__mw9sG IconButton_button_medium__8KBUt  Modal_closeButton__PGrRw"
              type="button"
      >
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz IconButton_icon__1J4sN"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r2t:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r2t:">
            Lukk dialogvindu
          </title>
          <path d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41Z">
          </path>
        </svg>
      </button>
      <div class="Modal_modalPaddingL__TAljg">
        <h1 id="modalHeadingId-:r2s:"
            class="Heading_heading__7K0um Heading_heading_level3__T5BVI Heading_heading_hasSpacingSmall__ofrX+ Modal_modalHeading__PFiZv"
        >
          Modal med textarea
        </h1>
        <div class>
          <label id="labelId-:r30:"
                 class="LabelWithHelp_label__59tP-"
                 for="textFieldTextboxId-:r2v:"
          >
            Navn
          </label>
          <textarea id="textFieldTextboxId-:r2v:"
                    class="TextField_textbox__qbZlk  TextField_textbox_multiline__dzg2r TextField_textbox_autosize__Ws65A"
                    style="height: 0px;"
          >
          </textarea>
          <div id="textFieldErrorId-:r2u:"
               aria-live="assertive"
               aria-atomic="true"
          >
          </div>
        </div>
      </div>
    </div>
  </dialog>
</div>
`;

exports[`Tester/TextField WithThousandSeparator play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r27:"
           class="LabelWithHelp_label__59tP-"
           for="textFieldTextboxId-:r26:"
    >
      Navn
    </label>
    <input id="textFieldTextboxId-:r26:"
           class="TextField_textbox__qbZlk"
           value
    >
    <div id="textFieldErrorId-:r25:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithThousandSeparatorAndNegativeValue play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r2a:"
           class="LabelWithHelp_label__59tP-"
           for="textFieldTextboxId-:r29:"
    >
      Navn
    </label>
    <input id="textFieldTextboxId-:r29:"
           class="TextField_textbox__qbZlk"
           value
    >
    <div id="textFieldErrorId-:r28:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithValue play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:rp:"
           class="LabelWithHelp_label__59tP-"
           for="textFieldTextboxId-:ro:"
    >
      Navn
    </label>
    <input id="textFieldTextboxId-:ro:"
           class="TextField_textbox__qbZlk"
           value="Kari Nordmann"
    >
    <div id="textFieldErrorId-:rn:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithVariantLarge smoke-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:rg:"
           class="LabelWithHelp_label__59tP-"
           for="textFieldTextboxId-:rf:"
    >
      Navn
    </label>
    <input id="textFieldTextboxId-:rf:"
           class="TextField_textbox__qbZlk TextField_textbox_large__Qmwm8"
           value
    >
    <div id="textFieldErrorId-:re:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;
